--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "jsdom": "^9.12.0",
     "node-emoji": "^1.5.1",
     "node-telegram-bot-api": "^0.27.0",
-    "object-hash": "^1.1.7"
+    "object-hash": "^1.1.7",
+    "sanitize-html": "^1.14.1"
   },
   "devDependencies": {},
   "scripts": {
