--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "webdip telegram bot",
   "main": "index.js",
   "dependencies": {
+    "debug": "^2.6.3",
     "jsdom": "^9.12.0",
     "node-emoji": "^1.5.1",
     "node-telegram-bot-api": "^0.27.0",
     "object-hash": "^1.1.7",
-    "sanitize-html": "^1.14.1"
+    "sanitize-html": "^1.14.1",
+    "winston": "^2.3.1"
   },
   "devDependencies": {},
   "scripts": {
