--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "debug": "^2.6.3",
+    "forever": "^0.15.3",
     "jsdom": "^9.12.0",
     "node-emoji": "^1.5.1",
     "node-telegram-bot-api": "^0.27.0",
