--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start:dev": "node index.js",
     "start:prod": "node index.js",
-    "start": "node index.js",
+    "start": "node index.js"
   },
   "dependencies": {
     "debug": "^2.6.3",
