--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "debug": "^2.6.3",
     "express": "4.16.4",
     "forever": "^0.15.3",
